--- a/README.adoc
+++ b/README.adoc
@@ -23,6 +23,7 @@ cd [repository_directory]
 # OPTIONAL (if using environment variables for AWS authentication)
 export AWS_ACCESS_KEY_ID=<your_aws_access_key_id>
 export AWS_SECRET_ACCESS_KEY=<your_aws_secret_key>
+export PORT=<desired_port>
 
 # REQUIRED
 export AWS_REGION=<your_aws_region>
