--- a/README.adoc
+++ b/README.adoc
@@ -50,7 +50,7 @@ go run main.go
 
 *Parameters:*
 
-* `folder` (optional): S3 folder/directory in which to save the uploaded file. Defaults to "stores" if not specified.
+* `folder` (optional): S3 folder/directory in which to save the uploaded file. Defaults to "/" if not specified.
 
 *CURL Example:*
 
